SERVER-46218 Fix removal/shutdown race in arbiter

If an arbiter is shut down soon after it is removed from the replica set
by a reconfig, the arbiter crashes due to a race between shutdown and
reconfig in KeysCollectionManager::enableKeyGenerator.

(cherry picked from commit 32f47846d78a4fdae9564b7ebb442d53e737d845)